# swagger/v1/swagger.yaml
@@ -1,9 +1,389 @@
 ---
 openapi: 3.0.1
 info:
-  title: API V1
+  title: API GOLD VAULT
   version: v1
 paths:
+  "/v1/users/addresses":
+    get:
+      summary: Retrieves all addresses
+      tags:
+      - V1|Users|Addresses|AddressesResources
+      security:
+      - user_auth_jwt: []
+      parameters:
+      - name: term
+        required: false
+        in: query
+        description: Term to search
+        schema:
+          type: string
+      responses:
+        '200':
+          description: addresses found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  addresses:
+                    type: array
+                    items:
+                      allOf:
+                      - "$ref": "#/components/partials/v1/users/addresses/_address"
+                  total_count:
+                    type: integer
+                  aggregators:
+                    type: object
+                    properties:
+                      city_id:
+                        type: object
+                        properties:
+                          meta:
+                            type: object
+                          doc_count:
+                            type: integer
+                          doc_count_error_upper_bound:
+                            type: integer
+                          sum_other_doc_count:
+                            type: integer
+                          buckets:
+                            type: array
+                            items:
+                              type: integer
+                      city_name:
+                        type: object
+                        properties:
+                          meta:
+                            type: object
+                          doc_count:
+                            type: integer
+                          doc_count_error_upper_bound:
+                            type: integer
+                          sum_other_doc_count:
+                            type: integer
+                          buckets:
+                            type: array
+                            items:
+                              type: string
+                      state_id:
+                        type: object
+                        properties:
+                          meta:
+                            type: object
+                          doc_count:
+                            type: integer
+                          doc_count_error_upper_bound:
+                            type: integer
+                          sum_other_doc_count:
+                            type: integer
+                          buckets:
+                            type: array
+                            items:
+                              type: integer
+                      country_id:
+                        type: object
+                        properties:
+                          meta:
+                            type: object
+                          doc_count:
+                            type: integer
+                          doc_count_error_upper_bound:
+                            type: integer
+                          sum_other_doc_count:
+                            type: integer
+                          buckets:
+                            type: array
+                            items:
+                              type: integer
+                      state_name:
+                        type: object
+                        properties:
+                          meta:
+                            type: object
+                          doc_count:
+                            type: integer
+                          doc_count_error_upper_bound:
+                            type: integer
+                          sum_other_doc_count:
+                            type: integer
+                          buckets:
+                            type: array
+                            items:
+                              type: string
+                      country_name:
+                        type: object
+                        properties:
+                          meta:
+                            type: object
+                          doc_count:
+                            type: integer
+                          doc_count_error_upper_bound:
+                            type: integer
+                          sum_other_doc_count:
+                            type: integer
+                          buckets:
+                            type: array
+                            items:
+                              type: string
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                example:
+                  message: User not logged
+    post:
+      summary: Create a address
+      tags:
+      - V1|Users|Addresses|AddressesResources
+      security:
+      - user_auth_jwt: []
+      parameters: []
+      responses:
+        '200':
+          description: Address created
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  address:
+                    allOf:
+                    - "$ref": "#/components/partials/v1/users/addresses/_address"
+        '400':
+          description: Error on create address
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  errors:
+                    type: string
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                example:
+                  message: User not logged
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                address:
+                  type: object
+                  properties:
+                    reference_type:
+                      type: string
+                    reference_id:
+                      type: integer
+                    street:
+                      type: string
+                    number:
+                      type: string
+                    neighborhood:
+                      type: string
+                    zip_code:
+                      type: string
+                    city_id:
+                      type: integer
+                    city_name:
+                      type: string
+                    state_id:
+                      type: integer
+                    state_name:
+                      type: string
+                    country_id:
+                      type: integer
+                    country_name:
+                      type: string
+  v1/users/addresses/{address_id}:
+    get:
+      summary: Retrieves a address
+      tags:
+      - V1|Users|Addresses|AddressesResources
+      parameters:
+      - name: address_id
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: Address found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  address:
+                    allOf:
+                    - "$ref": "#/components/partials/v1/users/addresses/_address"
+        '404':
+          description: Address not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  errors:
+                    type: string
+                example:
+                  errors: Address not found
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                example:
+                  message: User not logged
+    put:
+      summary: Update a address
+      tags:
+      - V1|Users|Addresses|AddressesResources
+      security:
+      - user_auth_jwt: []
+      parameters:
+      - name: address_id
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: Address updated
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  address:
+                    allOf:
+                    - "$ref": "#/components/partials/v1/users/addresses/_address"
+        '400':
+          description: Error on update address
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  errors:
+                    type: string
+        '404':
+          description: Address not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  errors:
+                    type: string
+                example:
+                  errors: Address not found
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                example:
+                  message: User not logged
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                address:
+                  type: object
+                  properties:
+                    reference_type:
+                      type: string
+                    reference_id:
+                      type: integer
+                    street:
+                      type: string
+                    number:
+                      type: string
+                    neighborhood:
+                      type: string
+                    zip_code:
+                      type: string
+                    city_id:
+                      type: integer
+                    city_name:
+                      type: string
+                    state_id:
+                      type: integer
+                    state_name:
+                      type: string
+                    country_id:
+                      type: integer
+                    country_name:
+                      type: string
+    delete:
+      summary: Delete a address
+      tags:
+      - V1|Users|Addresses|AddressesResources
+      security:
+      - user_auth_jwt: []
+      parameters:
+      - name: address_id
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: Address deleted
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  address:
+                    allOf:
+                    - "$ref": "#/components/partials/v1/users/addresses/_address"
+        '404':
+          description: Address not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  errors:
+                    type: string
+                example:
+                  errors: Address not found
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                example:
+                  message: User not logged
   "/v1/users/participants":
     get:
       summary: Retrieves all participants
@@ -334,7 +714,7 @@ paths:
             schema:
               type: object
               properties:
-                name:
+                email:
                   type: string
                 password:
                   type: string
@@ -933,7 +1313,7 @@ paths:
                 example:
                   message: User not logged
 servers:
-- url: http://localhost:8080
+- url: http://192.168.1.100:8282
 components:
   schemas:
     Address:
@@ -963,6 +1343,8 @@ components:
         updated_at:
           type: string
           format: date-time
+        is_deleted:
+          type: boolean
     City:
       type: object
       properties:
@@ -1072,6 +1454,42 @@ components:
   partials:
     v1:
       users:
+        addresses:
+          _address:
+            type: object
+            properties:
+              id:
+                type: integer
+              reference_type:
+                type: string
+              reference_id:
+                type: integer
+              street:
+                type: string
+              number:
+                type: string
+              neighborhood:
+                type: string
+              zip_code:
+                type: string
+              city_id:
+                type: integer
+              city_name:
+                type: string
+              state_id:
+                type: integer
+              state_name:
+                type: string
+              country_id:
+                type: integer
+              country_name:
+                type: string
+              created_at:
+                type: string
+                format: date-time
+              updated_at:
+                type: string
+                format: date-time
         participants:
           participants:
             _participant:
